Bug con z-index fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,19 +5,23 @@ header {
     margin-top: 70px;
 }
 header .nav {
+
     background-color: var(--white);
     display: flex;
     flex-direction: row ;
     width: 100%;
     height: 70px;
     padding: 5px;
-    /* border: 1px solid var(--grey); */
-    /* margin: 2px; */
+
+    /* Flex properties */
+
     border-radius: 2px;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 3;
+    border-bottom: 1px solid rgb(177, 175, 175);
 }
 
 .nav-linkedin-icon {
